--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,8 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicios\ServicioCliente.cs" />
+    <Compile Include="Servicios\ServicioReportePago.cs" />
+    <Compile Include="Servicios\ServicioReserva.cs" />
+    <Compile Include="Servicios\ServicioServicioInstalacion.cs" />
+    <Compile Include="Servicios\ServicioServicioPersonal.cs" />
+    <Compile Include="Servicios\ServicioUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
