--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,8 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDatos\BDRepositorioCliente.cs" />
+    <Compile Include="BaseDatos\BDRepositorioPersonal.cs" />
+    <Compile Include="BaseDatos\BDRepositorioReportePago.cs" />
+    <Compile Include="BaseDatos\BDRepositorioReserva.cs" />
+    <Compile Include="BaseDatos\BDRepositorioServicioInstalacion.cs" />
+    <Compile Include="BaseDatos\BDRepositorioServicioPersonal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\RepositorioCliente.cs" />
+    <Compile Include="Repositorios\RepositorioPersonal.cs" />
     <Compile Include="Repositorios\RepositorioReportePago.cs" />
     <Compile Include="Repositorios\RepositorioReserva.cs" />
     <Compile Include="Repositorios\RepositorioServicioInstalacion.cs" />
